--- a/css/site.css
+++ b/css/site.css
@@ -585,7 +585,7 @@ footer#site-footer .socials {
     list-style: none;
 }
 .about-timeline sup, .about-timeline sub {
-    font-size: 8px;
+    font-size: 9px;
 }
 .about-timeline sub {
     vertical-align: baseline;
@@ -647,6 +647,19 @@ ul.timeline-wrapper > li:nth-of-type(11):before {
     content:'26';
 }
 
+@media (min-width: 768px) {
+    .about-timeline sup, .about-timeline sub {
+        font-size: 16px;
+    }
+    ul.timeline-wrapper li ul {
+        margin-left: 30px;
+        font-size: 32px;
+    }
+    ul.timeline-wrapper {
+        font-size: 32px;
+    }
+}
+
 @media (min-width: 992px) {
     .about-timeline {
         padding: 120px 0;
@@ -654,29 +667,24 @@ ul.timeline-wrapper > li:nth-of-type(11):before {
 }
 
 @media (min-width: 1350px) {
-    ul.timeline-wrapper > li:before {
-        display: inline-block;
-    }
-    .about-timeline sup, .about-timeline sub {
-        font-size: 25px;
-    }
-    ul.timeline-wrapper li ul {
-        margin-left: 120px;
-    }
     ul.timeline-wrapper {
-        font-family: "Zalando Sans Expanded", sans-serif;
-        font-weight: 900;
         font-size: 50px;
-        text-transform: uppercase;
     }
     ul.timeline-wrapper > li:before {
-        content:'';
         display: inline-block;
-        font-family: "IBM Plex Mono", monospace;
-        font-weight: 700;
         width: 75px;
     }
     ul.timeline-wrapper > li:nth-of-type(10):before {
         width: 92px;
+    }
+    ul.timeline-wrapper > li:before {
+        display: inline-block;
+    }
+     ul.timeline-wrapper li ul {
+        margin-left: 120px;
+        font-size: 50px;
+    }
+    .about-timeline sup, .about-timeline sub {
+        font-size: 25px;
     }
 }
