--- a/css/site.css
+++ b/css/site.css
@@ -205,7 +205,7 @@ header#site-header .container {
 /* Footer */
 footer#site-footer {
     padding: 100px 20px;
-    background: rgba(17, 12, 24,0.9);
+    background: #110c18;
 }
 footer#site-footer .footer-logo {
     margin-bottom: 60px;
@@ -510,7 +510,7 @@ footer#site-footer .socials {
         right: 0;
         bottom: 0;
         left: 0;
-        background-color: rgba(17,12,24,0.9);
+        background-color: #110c18;
     }
     .contact-form .form-container {
         background: #ffffff;
