--- a/css/site.css
+++ b/css/site.css
@@ -254,40 +254,24 @@ footer#site-footer .socials {
 /* Interior Title Banners */
 .title-banner {
     padding: 80px 20px;
-    text-align: center;
-    overflow: hidden;
-    background: rgb(255, 183, 13,0.1);
-    background: -webkit-linear-gradient(45deg, rgb(255, 183, 13) 0%, rgba(255, 153, 13, 1) 100%);
-    background: -moz-linear-gradient(45deg, rgba(255, 183, 13, 1) 0%, rgba(255, 153, 13, 1) 100%);
-    background: linear-gradient(45deg, rgba(255, 183, 13, 1) 0%, rgba(255, 153, 13, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#FFB70D", endColorstr="#FF990D", GradientType=0);
-    color: #1E152A;
+    background: #110c18;
 }
-.title-banner:before {
-    content:'';
-    display: block;
-    width: 1350px;
-    height: 1350px;
-    border-radius: 675px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
-    background: #1E152A;
-    opacity: 0.1;
+
+.title-banner .secondary-heading {
+    font-family: "Zalando Sans Expanded", sans-serif;
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: 900;
+    margin-bottom: 20px;
+    color: rgba(255,255,255,0.25);
 }
-    .title-banner .secondary-heading {
-        font-family: "Zalando Sans Expanded", sans-serif;
-        font-size: 24px;
-        text-transform: uppercase;
-        font-weight: 900;
-        margin-bottom: 20px;
-    }
-    .title-banner h1 {
-        font-family: "IBM Plex Sans", sans-serif;
-        font-weight: 300;
-    }
+
+.title-banner h1 {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 300;
+    color: #ffb70d;
+}
+
 @media (min-width: 992px) {
     .title-banner {
         padding: 120px 20px;
