--- a/css/site.css
+++ b/css/site.css
@@ -25,6 +25,9 @@ body {
     margin: auto;
     padding: 0 25px;
 }
+.container.sm {
+    max-width: 850px;
+}
 
 @media (min-width: 1500px) {
     .container {
