--- a/css/site.css
+++ b/css/site.css
@@ -693,17 +693,26 @@ ul.timeline-wrapper > li:nth-of-type(11):before {
         width: 100%;
         margin: 0 auto 50px;
         max-width: 500px;
+        background: #110c18;
+        border-radius: 25px;
+        padding: 25px;
     }
+        .services .item a {
+            text-decoration: none;
+        }
         .services .item:last-child {
             margin-bottom: 0;
         }
         .services .item img {
             width: 75px;
             height: 75px;
+            margin-bottom: 15px;
         }
-        .services- .item h2 {
+        .services .item h2 {
             color: #ffb70d;
             margin: 15px 0;
+            font-size: 24px;
+            margin-bottom: 15px;
         }
 @media (min-width: 992px) {
     .services {
@@ -726,4 +735,9 @@ ul.timeline-wrapper > li:nth-of-type(11):before {
                 width: 125px;
                 height: 125px;
             }
+}
+@media (min-width: 1200px) {
+    .services .item h2 {
+        font-size: 32px
+    }
 }
